Bug 702128 - File renders incorrectly with current master, 9.50 renders correctly
Summary: File renders incorrectly with current master, 9.50 renders correctly
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Regression (show other bugs)
Version: master
Hardware: PC Windows 10
: P2 normal
Assignee: Ray Johnston
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-15 15:21 UTC by Ken Sharp
Modified: 2020-02-18 23:31 UTC (History)
1 user (show)

See Also:
Customer: 650
Word Size: ---


Attachments
reduced file (11.40 MB, application/pdf)
2020-02-15 15:21 UTC, Ken Sharp
Details
b2.pdf (469.82 KB, application/pdf)
2020-02-16 04:25 UTC, Ray Johnston
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2020-02-15 15:21:49 UTC
Created attachment 18863 [details]
reduced file

The attached, reduced, customer file renders correctly with this command line on 9.50:

gswin64c -dBATCH -dNOPAUSE -sDEVICE=tiffsep -sOutputFile=out.tif -dNoSeparationFiles -r360 D:\temp\bike1.pdf

Since this commit:

05c41c0dedaa512419f15798cbc3da92b6a90bbc

Squashed commit fill-stroke3 branch

The renderd output is incorrect. Looking closely there are regions (bands ?) where the bike handlebars are blended with the yellow backdrop and recions where they are not. They should not be blended. In addition there are two horizontal yellow stripes towards the bottom of the intersecting yellow 'fills' which should not be present.

Rendering at lower resolution does not exhibit any problems. Taking the resolution together with the 'banded' appearance of the problem I suspect this is clist related.

The attached file is, unfortunately, still very complex. The 'image' is not a single image, its thousands of individual scan line drawn individually and butted up against one another. One of the forms contains ~2500 images.....

There are dozens of extgstates and thousands of images. Reducing the problem further will require manual work in the PDF file (the attached file is decompressed).
Comment 1 Ken Sharp 2020-02-15 15:23:26 UTC
P2 for customer (and regression), add customer number, assign to Michael (may actually need to be Ray).
Comment 2 Ray Johnston 2020-02-16 04:25:07 UTC
Created attachment 18864 [details]
b2.pdf

This is a much more simplified file. It works without clist, but fails even
with a single band. Command line:
 -Z: -o x.tif -r72 -sDEVICE=tiff32nc -dMaxBitmap=0 b2.pdf

I will coordinate with Michael Vrhel to see if he wants this, but I will take
it for now.(since it only fails with clist mode).
Comment 3 Michael Vrhel 2020-02-18 21:39:15 UTC
Should be fixed with

https://git.ghostscript.com/?p=ghostpdl.git;a=commit;h=646007af056447fefd61eabfcdae85bfd6017d24

Thanks to Ray and Ken for doing all the heavy work of reducing the file and to Ray for finding the cause.